--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ div.tocify {
   <a href="statistical_analysis.html">Statistical Analysis</a>
 </li>
 <li>
-  <a href="http://github.com/kpatpatt/p8105_final">
+  <a href="https://github.com/glj2117/p8105_final_website.io">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -380,6 +380,8 @@ src="images/NYC_Downtown_Manhattan_Skyline_seen_from_Paulus_Hook_2019-12-20_IMG_
 </div>
 <div id="screencast" class="section level2">
 <h2>Screencast</h2>
+<p><a href="https://github.com/glj2117/p8105_final_website.io">GitHub
+Repo</a></p>
 </div>
 
 
