--- a/project_report.html
+++ b/project_report.html
@@ -343,7 +343,7 @@ div.tocify {
   <a href="statistical_analysis.html">Statistical Analysis</a>
 </li>
 <li>
-  <a href="http://github.com/kpatpatt/p8105_final">
+  <a href="https://github.com/glj2117/p8105_final_website.io">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
