attempt 2 for video

--- a/index.html
+++ b/index.html
@@ -380,6 +380,10 @@ src="images/NYC_Downtown_Manhattan_Skyline_seen_from_Paulus_Hook_2019-12-20_IMG_
 </div>
 <div id="screencast" class="section level2">
 <h2>Screencast</h2>
+<p>{% include youtube.html id=“e6ylMwhOCwU” %}</p>
+</div>
+<div id="github-repo-link" class="section level2">
+<h2>GitHub Repo Link</h2>
 <p><a href="https://github.com/glj2117/p8105_final_website.io">GitHub
 Repo</a></p>
 </div>
